# zkp-rs

./: Cargo.toml  Makefile  README.md  docker-compose.prebuilt.yml  docker-compose.yml
.github/workflows/: build-and-publish-images.yml  integration-tests.yml  pr-checks.yml  publish-docs.yml
_charts/: zkp-rs-0.1.0.tgz
_charts/zkp-rs/: Chart.yaml  values.yaml
client/: Cargo.toml  Dockerfile
client/src/: auth.rs  lib.rs  seed.rs  user.rs
client/tests/: test_zkp_flow.rs  user_flow_test.rs
common/: Cargo.toml
common/src/: dto.rs  lib.rs  request_dto.rs  response_dto.rs
docs/: .rustc_info.json  CNAME  help.html  index.html  search-index.js  settings.html  source-files.js
docs/doc/: crates.js  settings.html
docs/zkp_client/: all.html  constant.MAX_SECRET_VAL.html  constant.MAX_SEED_VAL.html  constant.MAX_USERNAME_LEN.html  constant.MIN_SEED_VAL.html  fn.check_status.html  fn.connect.html  fn.create_auth_request.html  fn.create_register_commits.html  fn.init_logger.html  fn.init_zkp_flow.html  fn.login_callback.html  fn.print_errors.html  fn.prove_auth.html  fn.register_user_with_server.html  index.html  sidebar-items.js  type.Callback.html
docs/zkp_common/: all.html  constant.G.html  constant.H.html  fn.write_and_flush_stream.html  index.html  sidebar-items.js
docs/zkp_server/: all.html  constant.MAX_CHALLENGE_VAL.html  fn.init_logger.html  fn.init_session_store.html  index.html  sidebar-items.js
server/: Cargo.toml  Dockerfile
server/src/: challenge.rs  error.rs  handlers.rs  lib.rs  server_error.rs  session_store.rs
(+342 files in other folders)
