[package]
name = "zkp-client"
version = "0.1.0"
edition = "2021"
default-run = "zkp-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8.2"
chrono = "0.4"
thiserror = "1.0"
dotenv = "0.15.0"
zkp-common = { path="../common" }


[dev-dependencies]
pretty_assertions = "1"