[package]
name = "zkp-server"
version = "0.1.0"
edition = "2021"
default-run = "zkp-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
dotenv = "0.15.0"
zkp-common = { path="../common" }


[dev-dependencies]
pretty_assertions = "1"